--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,7 +8,7 @@ body
   color: rgb(165, 7, 7);
 }
 
-.help
+.cmd
 {
   color: rgb(221, 221, 18);
 }
@@ -51,3 +51,51 @@ body
     80% { content: "..."; }
     90% { content: ".."; }
   }
+
+  /* Default Theme */
+.theme-default {
+  background-color: black;
+  color: white;
+}
+
+/* SQL Theme */
+.theme-sql {
+  background-color: navy;
+  color: yellow;
+}
+
+/* Ubuntu Theme */
+.theme-ubuntu {
+  background-color: #300a24;
+  color: #f8f8f2;
+}
+
+/* Matrix Theme */
+.theme-matrix {
+  background-color: black;
+  color: lime;
+}
+
+/* White Theme */
+.theme-white {
+  background-color: white;
+  color: black;
+}
+
+/* Terminal Theme */
+.theme-terminal {
+  background-color: #333;
+  color: lightgreen;
+}
+
+/* Classic Theme */
+.theme-clasic {
+  background-color: gray;
+  color: white;
+}
+
+/* PowerShell (PS) Theme */
+.theme-ps {
+  background-color: darkblue;
+  color: cyan;
+}
