--- a/CSS/main.css
+++ b/CSS/main.css
@@ -45,7 +45,7 @@ label {
 
 .portrait
 {
-  position: fixed;
+  position: absolute;
   left: 60%;
   top: 0;
   font-weight: 700;
@@ -61,6 +61,9 @@ label {
   color: rgb(52, 143, 170);
 }
 
+
+
+
 @media screen and (min-width: 768px) {
   .theme-default .proj .disc,
   .theme-sql .proj .disc,
@@ -72,6 +75,54 @@ label {
   }
 }
 
+
+  /*///////////// */
+ /* Download bar */
+/*///////////// */
+.filename {
+  font-weight: bold;
+  color: #ccc;
+}
+
+.progress-container {
+  background-color: #111;
+  border: 1px solid #333;
+  border-radius: 3px;
+  height: 10px;
+  width: 500px;
+  margin: 5px 0;
+  overflow: hidden;
+}
+
+.progress-bar  {
+  height: 100%;
+  background-color: #79ff4d; /* neon green */
+  width: 0%; /* will animate */
+  animation: load 2s ease-in-out;
+}
+
+@keyframes load {
+  0%   { width: 0%; }
+  10%  { width: 5%; }
+  40%  { width: 50%; }
+  70%  { width: 80%; }
+  90%  { width: 95%; }
+  100% { width: 100%; }
+}
+
+.green {
+  color: #79ff4d;
+  margin-right: 10px;
+}
+
+.red {
+  color: #ff4d4d;
+  margin-right: 10px;
+}
+
+.dim {
+  color: #888;
+}
 
   /**************/
  /* Hack theme */
