--- a/CSS/main.css
+++ b/CSS/main.css
@@ -45,17 +45,45 @@ label
 
 
 .about {
-  width: 60%;
   position: relative;
-  /* left: 4%; */
+  width: 60%;
+  left: 0;
+  /* padding-right: 14%; Creates spacing from the right */
 }
+
+@media (max-width: 950px) {
+  .about {
+    width: 90%;
+    margin-right: 5%;
+    padding-right: 5%;
+  }
+}
+
+
+
 
 .portrait
 {
   position: absolute;
   left: 60%;
+  white-space: pre;   
   top: 0;
+  line-height: 1.2;   
   font-weight: 700;
+  font-size: 1rem;
+}
+
+@media (max-width: 920px) {
+  .portrait {
+    position: relative; 
+    margin: 0 auto;
+    white-space: pre;  
+    top:0;
+    left: 0%;
+    text-align: center;
+    font-size: .8rem; 
+    font-stretch:narrower;
+  }
 }
 
 .prmt1
